--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Bolt Compose</string>
+    <string name="become_a_driver">Become a driver</string>
+    <string name="earn_money_on_your_schedule">Earn money on your schedule</string>
+    <string name="edit_profile">Edit profile</string>
 </resources>
